# cosmograph_widget

./: .eslintrc  .gitignore  README.md  build-config-schema.js  package-lock.json  package.json  postinstall.sh  pyproject.toml
cosmograph/: __init__.py  base.py  util.py
cosmograph/static/: config-schema.json  widget.js
js/: config-props.ts  config-schema.ts  helper.ts  widget.css  widget.ts
notebooks/: example.ipynb  example_simple.ipynb  links.json  points.json  tw_cosmo_scrap.ipynb
src/cosmograph_widget/: __init__.py
