[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cosmograph_widget/__about__.py"

[project]
name = "cosmograph-widget"
dependencies = ["anywidget", "pyarrow"]
readme = "README.md"
dynamic = [
 "version",
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

# automatically add the dev feature to the default env (e.g., hatch shell)
[tool.hatch.envs.default]
features = ["dev"]
dependencies = [
  "pandas",
]


[tool.hatch.build]
only-packages = true
artifacts = ["src/cosmograph_widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/cosmograph_widget/static/widget.js"]
skip-if-exists = ["src/cosmograph_widget/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
